--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
   
 
     @await Html.PartialAsync("_navbar")
-	<partial name="_header">
+	@RenderSection("Header",false)
 
-    <main> 
+    <main class = "mb-3  "> 
 		<div class="container">
 
             @if (IsSectionDefined("Categories"))
@@ -47,6 +47,14 @@
 			
 		</div>
 	</main>
+
+    <footer class="py-5 bg-dark text-white text-center">
+        OHM Game | 2022
+    </footer>
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     @RenderSection("Scripts",false)
 
