--- a/Views/Shared/Components/Categories/Default.cshtml
+++ b/Views/Shared/Components/Categories/Default.cshtml
@@ -1,8 +1,10 @@
  @model List<Category>
  
  <div class="list-group">
-    @foreach (var category in Model)
+    <a asp-controller="Game" asp-action="List" asp-route-id ="" class="list-group-item list-group-item-action">Tüm Ürünler</a>
+    @foreach (var category in Model)  
     {
-        <a href="#" class="list-group-item list-group-item-action">@category.Name</a>
+        <a asp-controller="Game" asp-action="List" asp-route-id ="@category.CategoryId" 
+            class="list-group-item list-group-item-action @(ViewBag.SelectedCategory==category.CategoryId.ToString()?"active":"")">@category.Name</a>
     }
 </div>   
