--- a/Views/Shared/_navbar.cshtml
+++ b/Views/Shared/_navbar.cshtml
@@ -3,14 +3,19 @@
 	<div class="container"> 
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a href="#" class="nav-link">Home</a>
+				<a href="/game/list" class="nav-link">Games</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">Link 8</a>
+				<a href="/game/create" class="nav-link">Add Game</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">mrba</a>
+				<a href="#" class="nav-link"></a>
 			</li>
 		</ul>
+
+		<form action="/game/list" class="form-inline">
+			<input name="q" type="text" class="form-control mr-2" placeholder="Search">
+			<button type="submit" class="btn btn-outline-light mr-0">Search</button>
+		</form>
 	</div>
 </div>
