--- a/Views/Shared/_product.cshtml
+++ b/Views/Shared/_product.cshtml
@@ -1,9 +1,9 @@
 @model Game
-<div class="card">
-    <img class="card-img-top" src="~/img/1.jpg" alt="">
+<div class="card mb-2">
+    <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
         <p class="card-text">@Model.Description</p>	
-        <a href="" class="btn btn-primary">incele</a>
-    </div>
+        <a asp-controller = "Game" asp-action = "Details" asp-route-id = "@Model.GameId" class="btn btn-primary">incele</a>
+    </div> 
 </div>	
